fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ html {
   color: #313131;
   text-align: center;
   width: 100%;
+  height: 35px;
 }
 @media screen and (max-width: 767px) {
   .name {
@@ -55,6 +56,7 @@ html {
     left: 0px;
     width: 50px;
     height: 130px;
+    top: 10px;
   }
   #nav .navbar-toggler {
     margin-left: -15px;
@@ -96,7 +98,7 @@ html {
 }
 @media screen and (max-width: 767px) {
   .stick {
-    top: 15px;
+    top: 10px;
     left: 0;
   }
 }
@@ -115,7 +117,7 @@ html {
 }
 
 .empty {
-  height: calc((100vh - 300px)/2);
+  height: 80px;
 }
 @media screen and (max-width: 767px) {
   .empty {
